--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
-    "Host": "website.com",
-    "LinksUseHttps": true,
     "SiteTitle": "Statiq Example",
-    "SiteDescription": "This is a Statiq Sample Site!",
-    "GenerateSearchIndex": true
+    "SiteDescription": "This is a Statiq Sample Site !!!",
+    "Host": "website.com",
+    "LinksUseHttps": true
 }
